--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -1059,9 +1059,9 @@
 %   registers.  We also store the balance of begin-group/end-group
 %   characters into \cs{g_@@_balance_intarray}.
 %    \begin{macrocode}
-\__intarray_new:Nn \g_@@_charcode_intarray { 65536 }
-\__intarray_new:Nn \g_@@_catcode_intarray { 65536 }
-\__intarray_new:Nn \g_@@_balance_intarray { 65536 }
+\intarray_new:Nn \g_@@_charcode_intarray { 65536 }
+\intarray_new:Nn \g_@@_catcode_intarray { 65536 }
+\intarray_new:Nn \g_@@_balance_intarray { 65536 }
 %    \end{macrocode}
 % \end{variable}
 %
@@ -4468,8 +4468,8 @@
 %   threads to be considered in the next step, more precisely the
 %   states in which these threads are.
 %    \begin{macrocode}
-\__intarray_new:Nn \g_@@_state_active_intarray { 65536 }
-\__intarray_new:Nn \g_@@_thread_state_intarray { 65536 }
+\intarray_new:Nn \g_@@_state_active_intarray { 65536 }
+\intarray_new:Nn \g_@@_thread_state_intarray { 65536 }
 %    \end{macrocode}
 % \end{variable}
 %
@@ -4569,7 +4569,7 @@
     \bool_gset_false:N \g_@@_success_bool
     \int_step_inline:nnnn
       \l_@@_min_state_int { 1 } { \l_@@_max_state_int - 1 }
-      { \__intarray_gset_fast:Nnn \g_@@_state_active_intarray {##1} { 1 } }
+      { \intarray_gset_fast:Nnn \g_@@_state_active_intarray {##1} { 1 } }
     \int_set_eq:NN \l_@@_min_active_int \l_@@_max_state_int
     \int_zero:N \l_@@_step_int
     \int_set_eq:NN \l_@@_success_pos_int \l_@@_min_pos_int
@@ -4684,7 +4684,7 @@
 \cs_new:Npn \@@_match_one_active:n #1
   {
     \@@_use_state_and_submatches:nn
-      { \__intarray_item_fast:Nn \g_@@_thread_state_intarray {#1} }
+      { \intarray_item_fast:Nn \g_@@_thread_state_intarray {#1} }
       { \@@_toks_use:w #1 }
   }
 %    \end{macrocode}
@@ -4700,11 +4700,11 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_query_set:nnn #1#2#3
   {
-    \__intarray_gset_fast:Nnn \g_@@_charcode_intarray
+    \intarray_gset_fast:Nnn \g_@@_charcode_intarray
       { \l_@@_curr_pos_int } {#3}
-    \__intarray_gset_fast:Nnn \g_@@_catcode_intarray
+    \intarray_gset_fast:Nnn \g_@@_catcode_intarray
       { \l_@@_curr_pos_int } {#2}
-    \__intarray_gset_fast:Nnn \g_@@_balance_intarray
+    \intarray_gset_fast:Nnn \g_@@_balance_intarray
       { \l_@@_curr_pos_int } { \l_@@_balance_int }
     \@@_toks_set:Nn \l_@@_curr_pos_int {#1}
     \int_incr:N \l_@@_curr_pos_int
@@ -4723,10 +4723,10 @@
 \cs_new_protected:Npn \@@_query_get:
   {
     \l_@@_curr_char_int
-      = \__intarray_item_fast:Nn \g_@@_charcode_intarray
+      = \intarray_item_fast:Nn \g_@@_charcode_intarray
           { \l_@@_curr_pos_int } \scan_stop:
     \l_@@_curr_catcode_int
-      = \__intarray_item_fast:Nn \g_@@_catcode_intarray
+      = \intarray_item_fast:Nn \g_@@_catcode_intarray
           { \l_@@_curr_pos_int } \scan_stop:
   }
 %    \end{macrocode}
@@ -4747,10 +4747,10 @@
   { }
 \cs_new_protected:Npn \@@_use_state:
   {
-    \__intarray_gset_fast:Nnn \g_@@_state_active_intarray
+    \intarray_gset_fast:Nnn \g_@@_state_active_intarray
       { \l_@@_curr_state_int } { \l_@@_step_int }
     \@@_toks_use:w \l_@@_curr_state_int
-    \__intarray_gset_fast:Nnn \g_@@_state_active_intarray
+    \intarray_gset_fast:Nnn \g_@@_state_active_intarray
       { \l_@@_curr_state_int } { \l_@@_step_int + 1 }
   }
 %    \end{macrocode}
@@ -4766,7 +4766,7 @@
   {
     \int_set:Nn \l_@@_curr_state_int {#1}
     \if_int_compare:w
-        \__intarray_item_fast:Nn \g_@@_state_active_intarray
+        \intarray_item_fast:Nn \g_@@_state_active_intarray
           { \l_@@_curr_state_int }
                       < \l_@@_step_int
       \tl_set:Nn \l_@@_curr_submatches_prop {#2}
@@ -4823,7 +4823,7 @@
         \exp_not:n
           {
             \if_int_compare:w
-                \__intarray_item_fast:Nn \g_@@_state_active_intarray
+                \intarray_item_fast:Nn \g_@@_state_active_intarray
                   { \l_@@_curr_state_int }
                 #1
               \exp_after:wN \@@_use_state:
@@ -4862,7 +4862,7 @@
 \cs_new_protected:Npn \@@_store_state:n #1
   {
     \@@_store_submatches:
-    \__intarray_gset_fast:Nnn \g_@@_thread_state_intarray
+    \intarray_gset_fast:Nnn \g_@@_thread_state_intarray
       { \l_@@_max_active_int } {#1}
     \int_incr:N \l_@@_max_active_int
   }
@@ -4992,8 +4992,8 @@
 \cs_new:Npn \@@_replacement_do_one_match:n #1
   {
     \@@_query_range:nn
-      { \__intarray_item_fast:Nn \g_@@_submatch_prev_intarray {#1} }
-      { \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} }
+      { \intarray_item_fast:Nn \g_@@_submatch_prev_intarray {#1} }
+      { \intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -5053,8 +5053,8 @@
 \cs_new:Npn \@@_query_submatch:n #1
   {
     \@@_query_range:nn
-      { \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} }
-      { \__intarray_item_fast:Nn \g_@@_submatch_end_intarray {#1} }
+      { \intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} }
+      { \intarray_item_fast:Nn \g_@@_submatch_end_intarray {#1} }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -5073,19 +5073,19 @@
     \int_eval:n
      {
       \int_compare:nNnTF
-        { \__intarray_item_fast:Nn \g_@@_submatch_end_intarray {#1} } = 0
+        { \intarray_item_fast:Nn \g_@@_submatch_end_intarray {#1} } = 0
         { 0 }
         {
-          \__intarray_item_fast:Nn \g_@@_balance_intarray
-            { \__intarray_item_fast:Nn \g_@@_submatch_end_intarray {#1} }
+          \intarray_item_fast:Nn \g_@@_balance_intarray
+            { \intarray_item_fast:Nn \g_@@_submatch_end_intarray {#1} }
         }
       -
       \int_compare:nNnTF
-        { \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} } = 0
+        { \intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} } = 0
         { 0 }
         {
-          \__intarray_item_fast:Nn \g_@@_balance_intarray
-            { \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} }
+          \intarray_item_fast:Nn \g_@@_balance_intarray
+            { \intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} }
         }
      }
   }
@@ -5154,8 +5154,8 @@
     \cs_set:Npn \@@_replacement_do_one_match:n ##1
       {
         \@@_query_range:nn
-          { \__intarray_item_fast:Nn \g_@@_submatch_prev_intarray {##1} }
-          { \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray {##1} }
+          { \intarray_item_fast:Nn \g_@@_submatch_prev_intarray {##1} }
+          { \intarray_item_fast:Nn \g_@@_submatch_begin_intarray {##1} }
         #1
       }
   }
@@ -5789,9 +5789,9 @@
 % \begin{variable}{\g_@@_submatch_prev_intarray, \g_@@_submatch_begin_intarray, \g_@@_submatch_end_intarray}
 %   Hold the place where the match attempt begun and the end-points of each submatch.
 %    \begin{macrocode}
-\__intarray_new:Nn \g_@@_submatch_prev_intarray { 65536 }
-\__intarray_new:Nn \g_@@_submatch_begin_intarray { 65536 }
-\__intarray_new:Nn \g_@@_submatch_end_intarray { 65536 }
+\intarray_new:Nn \g_@@_submatch_prev_intarray { 65536 }
+\intarray_new:Nn \g_@@_submatch_begin_intarray { 65536 }
+\intarray_new:Nn \g_@@_submatch_end_intarray { 65536 }
 %    \end{macrocode}
 % \end{variable}
 %
@@ -5897,15 +5897,15 @@
         {
           \if_int_compare:w \l_@@_start_pos_int < \l_@@_success_pos_int
             \@@_extract:
-            \__intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
+            \intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
               { \l_@@_zeroth_submatch_int } { 0 }
-            \__intarray_gset_fast:Nnn \g_@@_submatch_end_intarray
+            \intarray_gset_fast:Nnn \g_@@_submatch_end_intarray
               { \l_@@_zeroth_submatch_int }
               {
-                \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray
+                \intarray_item_fast:Nn \g_@@_submatch_begin_intarray
                   { \l_@@_zeroth_submatch_int }
               }
-            \__intarray_gset_fast:Nnn \g_@@_submatch_begin_intarray
+            \intarray_gset_fast:Nnn \g_@@_submatch_begin_intarray
               { \l_@@_zeroth_submatch_int }
               { \l_@@_start_pos_int }
           \fi:
@@ -5913,12 +5913,12 @@
       #1
       \@@_match:n {#2}
 %<assert>\assert_int:n { \l_@@_curr_pos_int = \l_@@_max_pos_int }
-      \__intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
+      \intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
         { \l_@@_submatch_int } { 0 }
-      \__intarray_gset_fast:Nnn \g_@@_submatch_end_intarray
+      \intarray_gset_fast:Nnn \g_@@_submatch_end_intarray
         { \l_@@_submatch_int }
         { \l_@@_max_pos_int }
-      \__intarray_gset_fast:Nnn \g_@@_submatch_begin_intarray
+      \intarray_gset_fast:Nnn \g_@@_submatch_begin_intarray
         { \l_@@_submatch_int }
         { \l_@@_start_pos_int }
       \int_incr:N \l_@@_submatch_int
@@ -6022,11 +6022,11 @@
       \int_set_eq:NN \l_@@_zeroth_submatch_int \l_@@_submatch_int
       \prg_replicate:nn \l_@@_capturing_group_int
         {
-          \__intarray_gset_fast:Nnn \g_@@_submatch_begin_intarray
+          \intarray_gset_fast:Nnn \g_@@_submatch_begin_intarray
             { \l_@@_submatch_int } { 0 }
-          \__intarray_gset_fast:Nnn \g_@@_submatch_end_intarray
+          \intarray_gset_fast:Nnn \g_@@_submatch_end_intarray
             { \l_@@_submatch_int } { 0 }
-          \__intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
+          \intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
             { \l_@@_submatch_int } { 0 }
           \int_incr:N \l_@@_submatch_int
         }
@@ -6039,14 +6039,14 @@
           \fi:
           \@@_int_eval:w \l_@@_zeroth_submatch_int + ##1 {##2}
         }
-      \__intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
+      \intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
         { \l_@@_zeroth_submatch_int } { \l_@@_start_pos_int }
     \fi:
   }
 \cs_new_protected:Npn \@@_extract_b:wn #1 < #2
-  { \__intarray_gset_fast:Nnn \g_@@_submatch_begin_intarray {#1} {#2} }
+  { \intarray_gset_fast:Nnn \g_@@_submatch_begin_intarray {#1} {#2} }
 \cs_new_protected:Npn \@@_extract_e:wn #1 > #2
-  { \__intarray_gset_fast:Nnn \g_@@_submatch_end_intarray {#1} {#2} }
+  { \intarray_gset_fast:Nnn \g_@@_submatch_end_intarray {#1} {#2} }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -6087,7 +6087,7 @@
             \@@_replacement_do_one_match:n { \l_@@_zeroth_submatch_int }
             \@@_query_range:nn
               {
-                \__intarray_item_fast:Nn \g_@@_submatch_end_intarray
+                \intarray_item_fast:Nn \g_@@_submatch_end_intarray
                   { \l_@@_zeroth_submatch_int }
               }
               { \l_@@_max_pos_int }
