Drop int/aux in another module [ci skip]

--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -335,8 +335,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[int,EXP]{\@@_keyval_parse:NNn}
-% \begin{macro}[aux,EXP]
+% \begin{macro}[EXP]{\@@_keyval_parse:NNn}
+% \begin{macro}[EXP]
 %   {
 %     \@@_keyval_loop:NNw,
 %     \@@_keyval_split:wwwNNw,
@@ -388,13 +388,13 @@
 %
 % \subsection{Helpers for expandable values}
 %
-% \begin{macro}[aux]{\s_@@}
+% \begin{macro}{\s_@@}
 %    \begin{macrocode}
 \cs_new_eq:NN \s_@@ \scan_stop:
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@_val_frame:n}
+% \begin{macro}[EXP]{\@@_val_frame:n}
 %    \begin{macrocode}
 \cs_new:Npn \@@_val_frame:n #1
   {
@@ -404,8 +404,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux,TF,EXP]{\@@_val_if_set:n}
-% \begin{macro}[aux,EXP]
+% \begin{macro}[TF,EXP]{\@@_val_if_set:n}
+% \begin{macro}[EXP]
 %   {\@@_val_if_set_auxi:nnn, \@@_val_if_set_auxii:nwNw}
 %    \begin{macrocode}
 \cs_new:Npn \@@_val_if_set:nTF #1#2 \s_@@ #3 \q_stop
@@ -427,9 +427,9 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP,TF]{\@@_val_do:nn, \@@_val_do:fn}
-% \begin{macro}[aux,EXP]{\@@_val_do:nn}
-% \begin{macro}[aux,EXP]{\@@_val_do_auxi:nn, \@@_val_do_auxii:nwn}
+% \begin{macro}[EXP,TF]{\@@_val_do:nn, \@@_val_do:fn}
+% \begin{macro}[EXP]{\@@_val_do:nn}
+% \begin{macro}[EXP]{\@@_val_do_auxi:nn, \@@_val_do_auxii:nwn}
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \@@_val_do:nn #1#2 { T , F , TF }
   {
@@ -455,8 +455,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@_val_unset:n}
-% \begin{macro}[aux,EXP]{\@@_val_unset_aux:n, \@@_val_unset_auxii:nnnww}
+% \begin{macro}[EXP]{\@@_val_unset:n}
+% \begin{macro}[EXP]{\@@_val_unset_aux:n, \@@_val_unset_auxii:nnnww}
 %    \begin{macrocode}
 \cs_new:Npn \@@_val_unset:n #1
   { \@@_val_if_set:nT {#1} { \@@_val_unset_aux:n {#1} } }
@@ -475,9 +475,9 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@_val_set_if_new:nn, \@@_val_set_if_new:no}
-% \begin{macro}[aux,EXP]{\@@_val_set:nn, \@@_val_set:no, \@@_val_set:ff}
-% \begin{macro}[aux,EXP]{\@@_val_set_new_aux:nn}
+% \begin{macro}[EXP]{\@@_val_set_if_new:nn, \@@_val_set_if_new:no}
+% \begin{macro}[EXP]{\@@_val_set:nn, \@@_val_set:no, \@@_val_set:ff}
+% \begin{macro}[EXP]{\@@_val_set_new_aux:nn}
 %    \begin{macrocode}
 \cs_new:Npn \@@_val_set_if_new:nn #1#2
   {
@@ -498,7 +498,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@_val_set_eq:nnF}
+% \begin{macro}[EXP]{\@@_val_set_eq:nnF}
 %    \begin{macrocode}
 \cs_new:Npn \@@_val_set_eq:nnF #1#2
   {
@@ -511,7 +511,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@_val_end:n}
+% \begin{macro}[EXP]{\@@_val_end:n}
 %    \begin{macrocode}
 \cs_new:Npn \@@_val_end:n #1#2 \s_@@ #3 \q_stop {#1}
 %    \end{macrocode}
@@ -519,7 +519,7 @@
 %
 % \subsection{Defining keys for \pkg{str-format}}
 %
-% \begin{macro}[aux,EXP]{\@@_parse:n}
+% \begin{macro}[EXP]{\@@_parse:n}
 %   This must be called within a \cs{@@_val_frame:n}
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse:n
@@ -527,8 +527,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@_key:n, \@@_key:nn}
-% \begin{macro}[aux,EXP]{\@@_key_aux:nn}
+% \begin{macro}[EXP]{\@@_key:n, \@@_key:nn}
+% \begin{macro}[EXP]{\@@_key_aux:nn}
 %   The \texttt{keyval} processing does not turn \meta{keys} to strings,
 %   and weird things would happen if they got expanded differently at
 %   various places in the code, so we turn \meta{keys} into strings
@@ -550,7 +550,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@/style:nn, \@@/fill:nn, \@@/alignment:nn}
+% \begin{macro}[EXP]{\@@/style:nn, \@@/fill:nn, \@@/alignment:nn}
 %   A few keys whose value must be a single character.  The
 %   \texttt{style} and \texttt{alignment} are subject to additional
 %   restrictions which depend on the type of variable hence are catered
@@ -577,7 +577,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@/width:nn, \@@/precision:nn}
+% \begin{macro}[EXP]{\@@/width:nn, \@@/precision:nn}
 %   Keys with non-negative integer values.
 %    \begin{macrocode}
 \cs_new:cpn { @@ / width :nn } #1#2
@@ -596,7 +596,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]
+% \begin{macro}[EXP]
 %   {
 %     \@@/+:nn, \@@/-:nn,
 %     \@@/+0-sign:nn, \@@/-0-sign:nn, \@@/0-body:nn,
@@ -619,7 +619,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@/sign:nn}
+% \begin{macro}[EXP]{\@@/sign:nn}
 %    \begin{macrocode}
  % \cs_new:cpn { @@ / sign :nn } #1#2
  %   {
@@ -649,8 +649,8 @@
 %
 % \subsection{Final alignment}
 %
-% \begin{macro}[aux,EXP]{\@@_align:n, \@@_align:f}
-% \begin{macro}[aux,EXP]
+% \begin{macro}[EXP]{\@@_align:n, \@@_align:f}
+% \begin{macro}[EXP]
 %   {
 %     \@@_align_aux:nnnnn, \@@_align_<:nnnn, \@@_align_^:nnnn,
 %     \@@_align_>:nnnn , \@@_align_=:nnnn
@@ -720,8 +720,8 @@
 %
 % \subsection{Floating point helper}
 %
-% \begin{macro}[aux,EXP]{\@@_fp_split:nN}
-% \begin{macro}[aux,EXP]
+% \begin{macro}[EXP]{\@@_fp_split:nN}
+% \begin{macro}[EXP]
 %   {\@@_fp_split_auxi:Nwww, \@@_fp_split_auxii:NwwwnN}
 %    \begin{macrocode}
 \cs_new:Npn \@@_fp_split:nN #1
@@ -746,7 +746,7 @@
 % \subsection{Floating point formatting}
 %
 % \begin{macro}[EXP]{\fp_format:nn}
-% \begin{macro}[aux,EXP]{\@@_fp_dispatch:nnn}
+% \begin{macro}[EXP]{\@@_fp_dispatch:nnn}
 %   Parse the format specification~|#2| and set some default values:
 %   align to the right, precision~$6$, style~|g|.  Then evaluate the
 %   floating-point expression and dispatch depending on the style |e|,
@@ -786,8 +786,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@_fp_special:nF}
-% \begin{macro}[aux,EXP]{\@@_fp_special_aux:nn}
+% \begin{macro}[EXP]{\@@_fp_special:nF}
+% \begin{macro}[EXP]{\@@_fp_special_aux:nn}
 %   This function receives |inf|, |-inf| or |nan| and calls
 %   \cs{@@_align:n} after setting~|S| correctly.  The result does not
 %   depend on the \meta{style}.  For |inf|, the result is the value of
@@ -818,7 +818,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@_fp_sign:N, \@@_fp_zero:NN}
+% \begin{macro}[EXP]{\@@_fp_sign:N, \@@_fp_zero:NN}
 %   These two functions are always called one after the other, and do
 %   not depend on the \meta{style}.  The \meta{sign} is the value of the
 %   key |+| or~|-| (depending on~|#1|), where |+|~defaults to being
@@ -847,8 +847,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@_fp_e:nn}
-% \begin{macro}[aux,EXP]{\@@_fp_e_auxi:nn, \@@_fp_e_auxii:NNnnn}
+% \begin{macro}[EXP]{\@@_fp_e:nn}
+% \begin{macro}[EXP]{\@@_fp_e_auxi:nn, \@@_fp_e_auxii:NNnnn}
 %   First filter out floating point numbers which are infinite or
 %   \texttt{nan}, as the rounding step would blow up.  For finite
 %   floating point numbers, the construction \cs{@@_fp_split:nN} |{#1}|
@@ -906,8 +906,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@_fp_f:nn}
-% \begin{macro}[aux,EXP]
+% \begin{macro}[EXP]{\@@_fp_f:nn}
+% \begin{macro}[EXP]
 %   {\@@_fp_f_auxi:nn, \@@_fp_f_auxii:NNnnn, \@@_fp_f_auxiii:wwwn}
 %   Round to |#2| (absolute) decimal places, then filter out special
 %   cases.  Then, the \texttt{auxii} auxiliary constructs the correct
@@ -952,8 +952,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux,EXP]{\@@_fp_g:nn}
-% \begin{macro}[aux,EXP]{\@@_fp_g_auxi:nn, \@@_fp_g_auxii:NNnnn}
+% \begin{macro}[EXP]{\@@_fp_g:nn}
+% \begin{macro}[EXP]{\@@_fp_g_auxi:nn, \@@_fp_g_auxii:NNnnn}
 %   The |g|~style starts like the |e|~style, but rounding to
 %   \meta{precision}~(|#2|) significant figures instead of $|#2|+1$.
 %   Once the special cases, signs and zeroes are taken care of, simply
@@ -1001,7 +1001,7 @@
 %
 % \subsection{Helpers}
 %
-% \begin{macro}[aux, EXP]{\use:nf, \use:fnf}
+% \begin{macro}[EXP]{\use:nf, \use:fnf}
 %   A simple variant.
 %    \begin{macrocode}
 \cs_generate_variant:Nn \use:nn { nf }
@@ -1009,14 +1009,14 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\tl_to_str:f}
+% \begin{macro}[EXP]{\tl_to_str:f}
 %   A simple variant.
 %    \begin{macrocode}
 \cs_generate_variant:Nn \tl_to_str:n { f }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_if_digit:NTF}
+% \begin{macro}[EXP]{\@@_if_digit:NTF}
 %   Here we expect |#1| to be a character with category other, or
 %   \cs{s__stop}.
 %    \begin{macrocode}
@@ -1028,7 +1028,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]
 %   {\@@_put:nw, \@@_put:ow, \@@_put:fw}
 %   Put |#1| after an \cs{s__stop} delimiter.
 %    \begin{macrocode}
@@ -1037,8 +1037,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP, TF]{\@@_if_in:nN}
-% \begin{macro}[aux, EXP]{\@@_if_in_aux:NN}
+% \begin{macro}[EXP, TF]{\@@_if_in:nN}
+% \begin{macro}[EXP]{\@@_if_in_aux:NN}
 %   A copy of \cs{__str_if_contains_char:nNTF} to avoid relying on
 %   this weird internal string function.
 %    \begin{macrocode}
@@ -1062,8 +1062,8 @@
 %
 % \subsection{Parsing a format specification}
 %
-% \begin{macro}[aux, EXP]{\@@_python:n}
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]{\@@_python:n}
+% \begin{macro}[EXP]
 %   {
 %     \@@_python_auxi:NN,
 %     \@@_python_auxii:nN,
@@ -1162,7 +1162,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_tl:NNNnnNn}
+% \begin{macro}[EXP]{\@@_tl:NNNnnNn}
 %   \begin{quote}
 %     \cs{@@_tl:NNNnnNn} \meta{fill} \meta{alignment} \meta{sign}
 %     \Arg{width} \Arg{precision} \meta{style} \Arg{token list}
@@ -1214,7 +1214,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_tl_s:NNnnNNn}
+% \begin{macro}[EXP]{\@@_tl_s:NNnnNNn}
 %   \begin{quote}
 %     \cs{@@_tl_s:NNnnNNn} \cs{s__stop} \meta{function}
 %     \Arg{arguments} \Arg{width} \meta{fill} \meta{alignment}
@@ -1257,7 +1257,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_seq:nn, \@@_seq:ff}
+% \begin{macro}[EXP]{\@@_seq:nn, \@@_seq:ff}
 %   The first argument is the contents of a \texttt{seq} variable.  The
 %   second is a parsed \meta{format specification}.  Set up the loop.
 %    \begin{macrocode}
@@ -1271,7 +1271,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_seq_loop:nnNn}
+% \begin{macro}[EXP]{\@@_seq_loop:nnNn}
 %   \begin{quote}
 %     \cs{@@_seq_loop:nnNn} \Arg{done} \Arg{parsed format}
 %     \cs{__seq_item:n} \Arg{item}
@@ -1291,7 +1291,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_seq_end:w}
+% \begin{macro}[EXP]{\@@_seq_end:w}
 %   Pick the right piece in the loop above.
 %    \begin{macrocode}
 \cs_new:Npn \@@_seq_end:w #1#2#3#4 { \use_ii:nnn #3 }
@@ -1308,7 +1308,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_int:nn}
+% \begin{macro}[EXP]{\@@_int:nn}
 %   Parse the \meta{format specification} and feed it to
 %   \cs{@@_int:NNNnnNn}.  Then convert the result to a string
 %    \begin{macrocode}
@@ -1324,7 +1324,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_int:NNNnnNn}
+% \begin{macro}[EXP]{\@@_int:NNNnnNn}
 %   \begin{quote}
 %     \cs{@@_int:NNNnnNn} \meta{fill} \meta{alignment}
 %     \meta{sign} \Arg{width} \Arg{precision} \meta{style} \Arg{integer}
@@ -1379,7 +1379,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_int:NwnnNNn}
+% \begin{macro}[EXP]{\@@_int:NwnnNNn}
 %   \begin{quote}
 %     \cs{@@_int:NwnnNNn} \meta{function} \cs{s__stop}
 %     \Arg{width} \Arg{sign} \meta{fill} \meta{alignment} \Arg{integer}
