Avoid using \__str_if_eq_x:nn outside l3str
The only places that really require the same functionality are the FPU
and bigint comparison. Both of these can use private copies which are
slightly more efficient. One might consider making the FPU version
wrap-up the "= 0" part other than for the bigint stuff.

--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1957,13 +1957,9 @@
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \skip_if_eq:nn #1#2 { p , T , F , TF }
   {
-    \if_int_compare:w
-      \__str_if_eq_x:nn { \skip_eval:n { #1 } } { \skip_eval:n { #2 } }
-      = 0 \exp_stop_f:
-        \prg_return_true:
-    \else:
-        \prg_return_false:
-    \fi:
+    \str_if_eq_x:nnTF { \skip_eval:n { #1 } } { \skip_eval:n { #2 } }
+       { \prg_return_true: }
+       { \prg_return_false: }
   }
 %    \end{macrocode}
 % \end{macro}
