--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -1266,11 +1266,9 @@
 \cs_new:Npn \__skip_compare:wwN #1; #2; #3
   {
     \if_charcode:w = #3
-       \if_int_compare:w \__str_if_eq_x:nn {#1} {#2} = 0 \exp_stop_f:
-         \prg_return_true:
-       \else:
-         \prg_return_false:
-       \fi:
+      \str_if_eq:nnTF {#1} {#2}
+         { \prg_return_true:}
+         { \prg_return_false: }
     \else:
       \if_dim:w \etex_glueexpr:D #1 #3 \etex_glueexpr:D #2 \scan_stop:
         \exp_after:wN \__skip_compare_auxii:wwN
