--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -1239,6 +1239,33 @@
 % \end{macro}
 % \end{macro}
 %
+% \subsection{Fast string comparison}
+%
+% \begin{macro}{\@@_str_if_eq_x:nn}
+%   A private version of the low-level string comparison function. As
+%   the nature of the is restricted and as speed is of the essence,
+%   this version does not seek to deal with |#| tokens (\emph{cf.}
+%   No \pkg{l3sys} or \pkg{l3luaex} just yet so we have to define in terms of
+%   primitives.
+%    \begin{macrocode}
+\cs_new:Npn \@@_str_if_eq_x:nn #1#2 { \pdftex_strcmp:D {#1} {#2} }
+\cs_if_exist:NT \luatex_luatexversion:D
+  {
+    \cs_set:Npn \@@_str_if_eq_x:nn #1#2
+      {
+        \luatex_directlua:D
+          {
+            l3kernel.strcmp
+              (
+                " \luatex_luaescapestring:D {#1}",
+                " \luatex_luaescapestring:D {#2}"
+              )
+          }
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{Name of a function from its \pkg{l3fp-parse} name}
 %
 % \begin{macro}[EXP]{\@@_func_to_name:N, \@@_func_to_name_aux:w}
