--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -1716,7 +1716,7 @@
     \if_catcode:w \scan_stop: \exp_not:N #1
       \if_meaning:w \scan_stop: #1
         \if_int_compare:w
-            \__str_if_eq_x:nn { \s_@@ } { \exp_not:N #1 }
+            \@@_str_if_eq_x:nn { \s_@@ } { \exp_not:N #1 }
             = 0 \exp_stop_f:
           0
           \__kernel_msg_expandable_error:nnn
@@ -1730,7 +1730,7 @@
         \fi:
       \else:
         \if_int_compare:w
-            \__str_if_eq_x:nn { \int_value:w #1 } { \tex_the:D #1 }
+            \@@_str_if_eq_x:nn { \int_value:w #1 } { \tex_the:D #1 }
             = 0 \exp_stop_f:
           \int_value:w #1
         \else:
@@ -2224,7 +2224,7 @@
   {
     \if_catcode:w \scan_stop: \exp_not:N #2
       \if_int_compare:w
-          \__str_if_eq_x:nn { \s_@@_mark } { \exp_not:N #2 }
+          \@@_str_if_eq_x:nn { \s_@@_mark } { \exp_not:N #2 }
           = 0 \exp_stop_f:
         \exp_after:wN \exp_after:wN
         \exp_after:wN \@@_parse_infix_mark:NNN
