--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -801,16 +801,6 @@
 %
 % \subsection{Internal string functions}
 %
-% \begin{function}[EXP]{\__str_if_eq_x:nn}
-%   \begin{syntax}
-%     \cs{__str_if_eq_x:nn} \Arg{tl_1} \Arg{tl_2}
-%   \end{syntax}
-%   Compares the full expansion of two \meta{token lists} on a character by
-%   character basis, and is \texttt{true} if the two lists contain the same
-%   characters in the same order. Leaves |0| in the input stream if the
-%   condition is true, and |+1| or |-1| otherwise.
-% \end{function}
-%
 % \begin{function}[EXP]{\__str_to_other:n}
 %   \begin{syntax}
 %     \cs{__str_to_other:n} \Arg{token list}
@@ -2094,10 +2084,8 @@
           \reverse_if:N \if:w \c_hash_str #1
             \@@_parse_auxi:w #1#2 \q_stop
           \else:
-            \if_int_compare:w \__str_if_eq_x:nn
-              { \exp_not:n {#2} } { ~Conditional~Mappings~ } = 0 \exp_stop_f:
-              \cs_set_protected:Npn \@@_parse:w ##1 \q_stop { }
-            \fi:
+            \str_if_eq:nnT {#2} { ~Conditional~Mappings~ }
+              { \cs_set_protected:Npn \@@_parse:w ##1 \q_stop { } }
           \fi:
         }
 %    \end{macrocode}
@@ -2113,12 +2101,12 @@
         {
           \tl_if_blank:nF {#7}
             {
-              \if_int_compare:w \__str_if_eq_x:nn { #5 ~ } {#7} = 0 \exp_stop_f:
-              \else:
-                \tl_const:cx
-                  { c__tl_mixed_case_ \utex_char:D "#1 _tl }
-                  { \utex_char:D "#7 }
-              \fi:
+              \str_if_eq:nnF { #5 ~ } {#7}
+                {
+                  \tl_const:cx
+                    { c__tl_mixed_case_ \utex_char:D "#1 _tl }
+                    { \utex_char:D "#7 }
+                }
             }
         }
       \@@_map_inline:n { UnicodeData.txt }
@@ -2130,18 +2118,19 @@
 %    \begin{macrocode}
       \cs_set_protected:Npn \@@_parse_auxi:w #1 ;~ #2 ;~ #3 ; #4 \q_stop
         {
-          \if_int_compare:w \__str_if_eq_x:nn {#2} { C } = 0 \exp_stop_f:
-            \if_int_compare:w \tex_lccode:D "#1 = "#3 \scan_stop:
-            \else:
-              \str_const:cx
-                { c__str_fold_case_ \utex_char:D "#1 _str }
-                { \utex_char:D "#3 ~ }
-            \fi:
-          \else:
-            \if_int_compare:w \__str_if_eq_x:nn {#2} { F } = 0 \exp_stop_f:
-              \@@_parse_auxii:w #1 ~ #3 ~ \q_stop
-            \fi:
-          \fi:
+          \str_if_eq:nnTF {#2} { C }
+            {
+              \if_int_compare:w \tex_lccode:D "#1 = "#3 \scan_stop:
+              \else:
+                \str_const:cx
+                  { c__str_fold_case_ \utex_char:D "#1 _str }
+                  { \utex_char:D "#3 ~ }
+              \fi:
+            }
+            {
+              \str_if_eq:nnT {#2} { F }
+               { \@@_parse_auxii:w #1 ~ #3 ~ \q_stop }
+            }
         }
       \cs_set_protected:Npn \@@_parse_auxii:w #1 ~ #2 ~ #3 ~ #4 \q_stop
         { \@@_store:nnnnn {#1} { fold } {#2} {#3} {#4} }
@@ -2165,10 +2154,8 @@
         {
           \use:n { \@@_parse_auxii:w #1 ~ lower ~ #2 ~ } ~ \q_stop
           \use:n { \@@_parse_auxii:w #1 ~ upper ~ #4 ~ } ~ \q_stop
-          \if_int_compare:w \__str_if_eq_x:nn {#3} {#4} = 0 \exp_stop_f:
-          \else:
-            \use:n { \@@_parse_auxii:w #1 ~ mixed ~ #3 ~ } ~ \q_stop
-          \fi:
+          \str_if_eq:nnF {#3} {#4}
+            { \use:n { \@@_parse_auxii:w #1 ~ mixed ~ #3 ~ } ~ \q_stop }
         }
       \cs_set_protected:Npn \@@_parse_auxii:w #1 ~ #2 ~ #3 ~ #4 ~ #5 \q_stop
         {
@@ -2184,11 +2171,11 @@
               \tl_if_blank:nF {#5}
                 { \utex_char:D "#5 }
             }
-          \if_int_compare:w \__str_if_eq_x:nn {#2} { mixed } = 0 \exp_stop_f:
-          \else:
-            \str_const:cx { c__str_ #2 _case_ \utex_char:D "#1 _str }
-              { \tl_use:c { c__tl_ #2 _case_ \utex_char:D "#1 _tl } }
-          \fi:
+          \str_if_eq:nnF {#2} { mixed }
+            {
+              \str_const:cx { c__str_ #2 _case_ \utex_char:D "#1 _str }
+                { \tl_use:c { c__tl_ #2 _case_ \utex_char:D "#1 _tl } }
+            }
         }
       \@@_map_inline:n { SpecialCasing.txt }
     }
