Misc comment fixups (spelling, clarifications) [ci skip]

--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -1243,9 +1243,9 @@
 %
 % \begin{macro}{\@@_str_if_eq_x:nn}
 %   A private version of the low-level string comparison function. As
-%   the nature of the is restricted and as speed is of the essence,
-%   this version does not seek to deal with |#| tokens (\emph{cf.}
-%   No \pkg{l3sys} or \pkg{l3luaex} just yet so we have to define in terms of
+%   the nature of the arguments is restricted and as speed is of the essence,
+%   this version does not seek to deal with |#| tokens.
+%   No \pkg{l3sys} or \pkg{l3luatex} just yet so we have to define in terms of
 %   primitives.
 %    \begin{macrocode}
 \cs_new:Npn \@@_str_if_eq_x:nn #1#2 { \pdftex_strcmp:D {#1} {#2} }
