--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -685,8 +685,13 @@
 %   stream the \meta{user code} after the \meta{ending code} for the
 %   loop.  The function breaks loops, inserting their \meta{ending
 %   code}, until reaching a loop with the same \meta{type} as its
-%   first argument.  This \cs[no-index]{\meta{type}_map_break:} argument is
-%   simply used as a recognizable marker for the \meta{type}.
+%   first argument.  This \cs[no-index]{\meta{type}_map_break:} argument
+%   must be defined; it is simply used as a recognizable marker for the \meta{type}.
+%
+%   For types with mappings defined in the kernel,
+%   \cs[no-index]{\meta{type}_map_break:} and \cs[no-index]{\meta{type}_map_break:n}
+%   are defined as \cs{prg_map_break:Nn} \cs[no-index]{\meta{type}_map_break:} |{}|
+%   and the same with |{}| omitted.
 % \end{function}
 %
 % \subsection{Simple mappings}
